# blocking

./: .gitignore  pyproject.toml  readme.md  ukesm_data.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml
jobs/: model.sh  propulate.sh  salloc-model.sh
model/: alexnet.py  dataset.py  debug.py  efficientnet_m.py  efficientnet_s.py  inception_v3.py  model.py  prop.py  propulate_search.py  resnet18.py  resnet50.py  rf.ipynb  rf.py  svm.py  test.py  train.py  train_test.py  traintest.py  util.py
model/.ipynb_checkpoints/: dataset-checkpoint.py  model-checkpoint.py
model/models/: efficientnet_m.py  efficientnet_s.py  inception_v3.py  resnet18.py
